--- a/notebook/notebook/Resources/layout/CustomRow.axml
+++ b/notebook/notebook/Resources/layout/CustomRow.axml
@@ -10,6 +10,5 @@
 		android:layout_height="wrap_content"
 		android:minWidth="25px"
 		android:minHeight="25px"
-		android:id="@+id/content" />
-
+		android:id="@+id/title" />
 </LinearLayout>
