--- a/notebook/notebook/Resources/layout/activity_main.axml
+++ b/notebook/notebook/Resources/layout/activity_main.axml
@@ -12,6 +12,10 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:id="@+id/linearLayout1">
+		<android.support.design.widget.TextInputEditText
+			android:layout_width="300dp"
+			android:layout_height="match_parent"
+			android:id="@+id/inputTitle" />
 		<LinearLayout
 			android:orientation="horizontal"
 			android:minWidth="25px"
@@ -19,15 +23,16 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:id="@+id/linearLayout2">
+
 			<android.support.design.widget.TextInputEditText
 				android:layout_width="300dp"
 				android:layout_height="match_parent"
-				android:id="@+id/input" />
+				android:id="@+id/inputContent" />
 			<Button
 				android:text="Button"
 				android:layout_width="wrap_content"
 				android:layout_height="match_parent"
-				android:id="@+id/button1" />
+				android:id="@+id/button" />
 		</LinearLayout>
 	</LinearLayout>
 	<ListView
